@@ -39,7 +39,7 @@ public class ORLExportersTest extends PersistenceTestCase {
 
         dbServer = dbSetup.getDbServer();
         sqlDataTypes = dbServer.getSqlDataTypes();
-        optimizedBatchSize = new Integer(10000);
+        optimizedBatchSize = Integer.valueOf(10000);
         dataset = new SimpleDataset();
         dataset.setName("test");
         dataset.setId(Math.abs(new Random().nextInt()));
