@@ -38,7 +38,7 @@ public class ORLOnRoadExporterTest extends PersistenceTestCase {
         dbServer = dbSetup.getDbServer();
         sqlDataTypes = dbServer.getSqlDataTypes();
         
-        optimizedBatchSize = new Integer(10000);
+        optimizedBatchSize = Integer.valueOf(10000);
         
         dataset = new SimpleDataset();
         dataset.setName("test");
