@@ -30,7 +30,7 @@ public class TemporalReferenceImporterTest extends PersistenceTestCase {
         dbServer = dbSetup.getDbServer();
         sqlDataTypes = dbServer.getSqlDataTypes();
 
-        optimizedBatchSize = new Integer(10000);
+        optimizedBatchSize = Integer.valueOf(10000);
 
         dataset = new SimpleDataset();
         dataset.setName("test");
